--- a/templates/music/d.html
+++ b/templates/music/d.html
@@ -2,8 +2,8 @@
 
 {% block body %}
 <audio autoplay>
-  <source src="../../statics/do.wav" type="audio/wav">
+  <source src="" type="audio/wav">
   Your browser does not support the audio element
 </audio>
-  <h1>Do</h1>
+  <h1>Re</h1>
 {% endblock %}
