added images and others

--- a/templates/interaction/neutral.html
+++ b/templates/interaction/neutral.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 
 {% block body %}
-  <h1>I am neutral</h1>
+<img src="{{url_for('static', filename='neutral.jpg')}}" align="middle" 
+style="width:100%;height:auto;object-fit:contain;"/>
 {% endblock %}
