--- a/templates/close.html
+++ b/templates/close.html
@@ -6,7 +6,8 @@
         <meta name="viewport" content="initial-scale=1, width=device-width" />
         <title>JAOKON</title>
     </head>
-    <body>
-        Session Ended
+    <body style="background-color:black;">
+        <img src="{{url_for('static', filename='pages/close.jpg')}}" align="middle" 
+style="width:100%;height:auto;object-fit:contain;"/>
     </body>
 </html>
