--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 
 {% block body %}
-  <h1>This is JAOKON</h1>
+<img src="{{url_for('static', filename='pages/normal_mode.jpg')}}" align="middle" 
+style="width:100%;height:auto;object-fit:contain;"/>
 {% endblock %}
