--- a/templates/face.html
+++ b/templates/face.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<img src="{{url_for('static', filename='emotions/'+pageDirect.face+'.jpg')}}" align="middle" 
+<img src="{{url_for('static', filename='emotions/'+pageDirect.current_image+'.jpg')}}" align="middle" 
 style="width:100%;height:auto;object-fit:contain;"/>
-
 {% endblock %}
