--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,10 +4,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="initial-scale=1, width=device-width" />
-        <meta http-equiv="refresh" content="3; url='/{{pageDirect.page}}'" />
+        <meta http-equiv="refresh" content="3; url='/{{pageDirect.next_page}}'" />
         <title>JAOKON</title>
     </head>
-    <body>
+    <body style="background-color:black;">
         {% block body %}{% endblock %}
     </body>
 </html>
