--- a/templates/layout2.html
+++ b/templates/layout2.html
@@ -4,10 +4,11 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="initial-scale=1, width=device-width" />
+        <meta http-equiv="refresh" content="songDuration; url='/{{pageDirect.next_page}}'" />
         <title>JAOKON</title>
     </head>
-    <body>
-        {{test.mode}}{{test.page}}
+    <body style="background-color:black;">
+        {% block body %}{% endblock %}
     </body>
 </html>
 
