--- a/templates/music.html
+++ b/templates/music.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 
 {% block body %}
-  <h1>Music Mode</h1>
+<img src="{{url_for('static', filename='pages/music_mode.jpg')}}" 
+align="middle" style="width:100%;height:auto;object-fit:contain;"/>
 {% endblock %}
