--- a/templates/note.html
+++ b/templates/note.html
@@ -1,13 +1,9 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<img src="{{url_for('static', filename='notes/'+pageDirect.note[0]+'.jpg')}}" align="middle" 
+<img src="{{url_for('static', filename='notes/'+pageDirect.current_image+'.jpg')}}" align="middle" 
 style="width:100%;height:auto;object-fit:contain;"/>
 
-<audio controls autoplay hidden>
-    <source src="{{ url_for('static', filename='audio/'+pageDirect.note+'.mp3') }}" type="audio/mpeg">
-    Your browser does not support the audio element.
-</audio>
-
+note
 
 {% endblock %}
