--- a/templates/error.html
+++ b/templates/error.html
@@ -1,4 +1,4 @@
-{% extends "layout2.html" %}
+{% extends "layout.html" %}
 
 {% block body %}
 <img src="{{url_for('static', filename='pages/error.jpg')}}" align="middle" 
