--- a/templates/song.html
+++ b/templates/song.html
@@ -1,7 +1,7 @@
 {% extends "layout2.html" %}
 
 {% block body %}
-<img src="{{url_for('static', filename='pages/maintenance.jpg')}}" align="middle" 
+<img src="{{url_for('static', filename='pages/music_mode.jpg')}}" align="middle" 
 style="width:100%;height:auto;object-fit:contain;"/>
 
 <audio controls autoplay hidden>
