--- a/templates/layout2.html
+++ b/templates/layout2.html
@@ -4,8 +4,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="initial-scale=1, width=device-width" />
-        <meta http-equiv="refresh" content="songDuration; url='/{{pageDirect.next_page}}'" />
-        <title>JAOKON</title>
+        <meta http-equiv="refresh" content="{{songDuration}}; url='/{{pageDirect.next_page}}'" />
+        <title>JAOKON</title>print("step 1")
     </head>
     <body style="background-color:black;">
         {% block body %}{% endblock %}
